# text-binary

./: changelog  text-binary.cabal
Data/Text/: Binary.hs
Data/Text/Lazy/: Binary.hs
